# candle

./: Cargo.toml
.cargo/: config.toml
candle-core/: Cargo.toml
candle-core/src/: cpu_backend.rs  utils.rs
candle-core/src/cpu/: mod.rs
candle-core/src/quantized/: k_quants.rs  mod.rs
candle-examples/examples/mistral/: main.rs
candle-examples/examples/phi/: main.rs
candle-examples/examples/quantized/: main.rs
candle-examples/examples/replit-code/: main.rs
candle-examples/examples/stable-lm/: main.rs
candle-examples/examples/yi/: main.rs
candle-nn/: Cargo.toml
candle-transformers/src/models/: mixformer.rs
candle-wasm-examples/bert/src/: lib.rs
candle-wasm-examples/llama2-c/src/: app.rs  worker.rs
candle-wasm-examples/phi_wasm/: Cargo.toml
candle-wasm-examples/phi_wasm/src/: llm.rs  main.rs
candle-wasm-examples/t5/src/: lib.rs
candle-wasm-examples/whisper/src/: app.rs  worker.rs
candle-wasm-tests/tests/: quantized_tests.rs
